--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,18 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  </head>
     <title>Document</title>
-</head>
-<body>
-<div id="chatbox">
+
+
+    <style>
+      .container-fondo {
+      width: 60%;
+      background-image: url('unam.jpg');
+      background-size: cover;
+      background-position: center;        
+      position: relative;         
+      border-top-right-radius: 30px;
+      border-bottom-right-radius: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: yellow;
+      text-align: center;
+    }
+    </style>
+  </head>
+  
+<body >
+<div class="container-fondo"></div>
+<nav class="navbar navbar-expand-sm bg-body-tertiary    m-0 border-0">
+  <div class="container-fluid  " style="background-color: rgb(190, 128, 241); "   >
+    <a class="navbar-brand" href="#"   style="font-family: 'Times New Roman', Times, serif;color: white;font-size: 150%;">🤖 ChatBot RH - FES Aragón🤖</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      
+     <ul class="navbar-nav ms-auto">
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="https://www.unam.mx/" style="color: white;" ><img src="logo.png" style="width: 180px;height: 85px"   > </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://plataformaeducativa.aragon.unam.mx/" style="color: white;" > <img src="cuentas-aragon.png" style=" width: 140px;
+      height: 85px;"  > </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false", style="color:white ">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true   ">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search"  style="background-color: rgb(139, 216, 247);color:white    " placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit"     style="background-color:white; color: black;">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <div id="chatbox" style="position: fixed; top: 30%; left: 60%; transform: translate(0, 0);">
+
+    <br><br><br>
     <h3>🤖 ChatBot RH - FES Aragón</h3>
     <div id="conversacion"></div>
-    
+    <br>
+
     <!-- Menú desplegable con preguntas frecuentes -->
-    <form id="formulario">
-      <label for="pregunta">Selecciona una pregunta:</label>
+     <div style="text-align: left;">
+    <form id="formulario"   "  style="margin: 10; border: 5px solid black; border-radius: 5px;">
+        <div classs ="container bg-success">
+        <label for="pregunta">Selecciona una pregunta:</label>
       <select id="pregunta" required>
         <option value="">-- Elige una opción --</option>
+      </div>
         <option value="horario de atención">¿Cuál es el horario de atención?</option>
         <option value="documentos para constancia">¿Qué documentos necesito para solicitar una constancia?</option>
         <option value="ubicación de la oficina">¿Dónde está la oficina de Recursos Humanos?</option>
@@ -23,6 +105,12 @@
       <button type="submit">Consultar</button>
     </form>
   </div>
+  </div>
 
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
-</html>
+</html> 
