--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,29 @@
 
 
     <style>
+
+
+      .formulario-wrapper {
+      width: 60%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .form-container {
+      background: white;
+      padding: 2.5em;
+      border-radius: 12px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      width: 1000px;
+       min-width: 600px; 
+      min-height: 600px;
+      align-items: center;
+      background-color: rgb(185, 231, 231);
+      max-width: 400px;
+    }
+
+        
       .container-fondo {
       width: 60%;
       background-image: url('unam.jpg');
@@ -81,8 +104,8 @@
 
 
 
-
- <div id="chatbox" style="position: fixed; top: 30%; left: 60%; transform: translate(0, 0);">
+ <div class="formulario-wrapper"></div>
+ <div id="chatbox" class="form-container"style="float: right;"">      
 
     <br><br><br>
     <h3>🤖 ChatBot RH - FES Aragón</h3>
