--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
-    <title>Document</title>
-
+    <title style="font-family: fantasy;">DUDAS</title>
+    <link rel="icon" href="logo-removebg-preview.png"  type="image/x-png",sizes="16x16">
 
     <style>
 
-
+      
       .formulario-wrapper {
       width: 60%;
       display: flex;
@@ -21,19 +21,20 @@
     .form-container {
       background: white;
       padding: 2.5em;
-      border-radius: 12px;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      
+      box-shadow: 0 6px 12px ;
       width: 1000px;
        min-width: 600px; 
-      min-height: 600px;
+      min-height: 800px;
       align-items: center;
-      background-color: rgb(185, 231, 231);
-      max-width: 400px;
+      border-radius: 35px;
+      background-color: rgba(0, 0, 0,0.4);
     }
 
         
       .container-fondo {
-      width: 60%;
+      width:  100%;
+     
       background-image: url('unam.jpg');
       background-size: cover;
       background-position: center;        
@@ -44,17 +45,18 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      color: yellow;
+      
       text-align: center;
+      background-color: blueviolet;
     }
     </style>
   </head>
   
 <body >
-<div class="container-fondo"></div>
-<nav class="navbar navbar-expand-sm bg-body-tertiary    m-0 border-0">
+<!-- menu para la navegacion -->
+<nav class="navbar navbar-expand-sm bg-body-tertiary    m-0 border-0 ">
   <div class="container-fluid  " style="background-color: rgb(190, 128, 241); "   >
-    <a class="navbar-brand" href="#"   style="font-family: 'Times New Roman', Times, serif;color: white;font-size: 150%;">🤖 ChatBot RH - FES Aragón🤖</a>
+    <a class="navbar-brand" href="#"   style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;color: white;font-size: 150%;">ChatBot RH - FES Aragón</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,7 +65,7 @@
      <ul class="navbar-nav ms-auto">
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="https://www.unam.mx/" style="color: white;" ><img src="logo.png" style="width: 180px;height: 85px"   > </a>
+          <a class="nav-link active" aria-current="page" href="https://www.unam.mx/" style="color: white;" ><img src="logo (1).png" style="width: 180px;height: 85px"   > </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://plataformaeducativa.aragon.unam.mx/" style="color: white;" > <img src="cuentas-aragon.png" style=" width: 140px;
@@ -85,8 +87,8 @@
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search"  style="background-color: rgb(139, 216, 247);color:white    " placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit"     style="background-color:white; color: black;">Search</button>
+        <input class="form-control me-2" type="search"  style="background-color: rgb(139, 216, 247);color:white;border-radius:60px" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit"     style="background-color:white; color: black;border-radius: 60px;">Search</button>
       </form>
     </div>
   </div>
@@ -98,21 +100,21 @@
 
 
 
+<div class="container-fondo" style="color: white">
 
 
+<div class="d-flex justify-content-center align-items-center mt-4" style="gap: 2rem;">
 
-
-
-
- <div class="formulario-wrapper"></div>
- <div id="chatbox" class="form-container"style="float: right;"">      
+ <div class="formulario-wrapper , navbar-expand-sm bg-body-tertiary " ></div>
+ <div id="chatbox" class="form-container form-container ms-auto">      
 
     <br><br><br>
-    <h3>🤖 ChatBot RH - FES Aragón</h3>
+    <h3>Dudas Y Preguntas Frecuentes </h3>
     <div id="conversacion"></div>
     <br>
 
-    <!-- Menú desplegable con preguntas frecuentes -->
+
+
      <div style="text-align: left;">
     <form id="formulario"   "  style="margin: 10; border: 5px solid black; border-radius: 5px;">
         <div classs ="container bg-success">
@@ -125,15 +127,36 @@
         <option value="ubicación de la oficina">¿Dónde está la oficina de Recursos Humanos?</option>
         <option value="contacto">¿Cuál es el contacto de Recursos Humanos?</option>
       </select>
-      <button type="submit">Consultar</button>
+      <button type="submit" style="border-radius: 60px;">Consultar</button>
     </form>
   </div>
   </div>
+  </div>
+ </div>
 
 
 
 
+</div>
 
+
+<!---    container para la seccion de preguntas   -->
+
+
+ 
+
+    <!---tarjetas -->
+  <!--
+<div class="card" style="width: 18rem;height: 25rem;">
+ 
+  <div class="card-body">
+    <h5 class="card-title">Telefonos Aragon</h5>content
+    <p class="card-text"><img src ="telefono.png" style="width: 180x;height: 180px;">Telefono :  55 5623 0845  | direccion@aragon.unam.mx</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html> 
